[package]
name = "voronoi-ca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.14"
winit = "0.27"
pollster = "0.2"
env_logger = "0.9"
bytemuck = {version = "1.12", features = ["derive"]}
glam = "0.21"
rand = "0.8"
voronator = "0.2"

# wasm32 dependencies
console_error_panic_hook = "0.1"
console_log = "0.2"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
